--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "ext-pcntl": "*",
         "epiecs/phpmiko": "dev-master",
         "symfony/yaml": "^4.3",
-        "league/climate": "^3.5"
+        "league/climate": "^3.5",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "kint-php/kint": "^3.2"
