--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=7.1",
         "ext-sockets": "*",
         "ext-pcntl": "*",
-        "epiecs/phpmiko": "dev-master",
+        "epiecs/phpmiko": "^1.0",
         "symfony/yaml": "^4.3",
         "league/climate": "^3.5",
         "guzzlehttp/guzzle": "^6.3"
